--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,3 +143,13 @@
 .floating {
   animation: float 5s ease-in-out infinite;
 }
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
