--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
   --chart-green: oklch(65.6% 0.145 163.225);
+  --chart-blue: oklch(0.6027 0.1999 261.28);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
