--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,6 +124,11 @@
   }
 }
 
+body {
+  --tw-tracking: var(--tracking-tight) /* -0.025em */;
+  letter-spacing: var(--tracking-tight) /* -0.025em */;
+}
+
 .pixelated {
   image-rendering: pixelated;
   /* fallback for older browsers */
